# sentinel-mcp

./: CITATION.cff  CONTRIBUTING.md  Cargo.toml  FINDINGS.md  LICENSE  README.md  SECURITY.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: config.yml  inaccurate-finding.yml  request-scan.yml
crates/cli/: Cargo.toml
crates/cli/src/: batch.rs  main.rs
crates/mcp-parser/: Cargo.toml
crates/mcp-parser/src/: go.rs  js.rs  lib.rs  python.rs  taint.rs
crates/mcp-parser/tests/: end_to_end.rs
crates/pack-mcp-core/: Cargo.toml  README.md
crates/pack-mcp-core/src/: context.rs  lib.rs  score.rs
docs/: METHODOLOGY.md
results/: registry.json  scores.json
