[package]
license.workspace = true
name = "sentinel-mcp-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "sentinel-mcp"
path = "src/main.rs"

[dependencies]
mcp-parser = { path = "../mcp-parser" }
pack-mcp-core = { path = "../pack-mcp-core" }
engine = { git = "https://github.com/anwen-labs/sentinel", package = "engine", rev = "8d558af97f2d6fb9a05bb970cb1730d85ad891d3" }
