[package]
license.workspace = true
name = "mcp-parser"
version = "0.1.0"
edition = "2021"

# MCP server repo -> FactModel (consumed by pack-mcp-core). Structural facts only in
# this scaffold: transport, lockfile presence, dependency pins, tool inventory (heuristic),
# TLS-disabled. Source-flow taint facts (the `*_from_input` flags) are the AST pass — TODO.

[dependencies]
fact-model = { git = "https://github.com/anwen-labs/sentinel", package = "fact-model", rev = "8d558af97f2d6fb9a05bb970cb1730d85ad891d3" }
serde_json = "1"

[dev-dependencies]
engine = { git = "https://github.com/anwen-labs/sentinel", package = "engine", rev = "8d558af97f2d6fb9a05bb970cb1730d85ad891d3" }
pack-mcp-core = { path = "../pack-mcp-core" }
